Project

General

Profile

Actions

Bug #42515

closed

fs: OpenFileTable object shards have too many k/v pairs

Added by Patrick Donnelly over 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (user)
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Since #40583 lowered the omap k/v limit to 200k, we've been seeing messages from deep scrubs showing the open file table is using too many k/v pairs.

We should match or use the osd_deep_scrub_large_omap_object_key_threshold value. Currently the MDS hardcodes a value of 1 million [1].

[1] https://github.com/ceph/ceph/blob/master/src/mds/OpenFileTable.h#L72


Related issues 4 (1 open3 closed)

Related to RADOS - Bug #40583: Lower the default value of osd_deep_scrub_large_omap_object_key_thresholdResolvedNeha Ojha06/28/2019

Actions
Related to CephFS - Bug #61950: mds/OpenFileTable: match MAX_ITEMS_PER_OBJ does not honor osd_deep_scrub_large_omap_object_key_thresholdNeed More Info

Actions
Copied to CephFS - Backport #43784: nautilus: fs: OpenFileTable object shards have too many k/v pairsResolvedNathan CutlerActions
Copied to CephFS - Backport #43785: mimic: fs: OpenFileTable object shards have too many k/v pairsRejectedActions
Actions #1

Updated by Patrick Donnelly over 4 years ago

  • Related to Bug #40583: Lower the default value of osd_deep_scrub_large_omap_object_key_threshold added
Actions #3

Updated by Vikhyat Umrao over 4 years ago

  • Status changed from New to In Progress
  • Assignee set to Vikhyat Umrao
Actions #4

Updated by Vikhyat Umrao over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 31232
Actions #5

Updated by Vikhyat Umrao over 4 years ago

  • Status changed from Fix Under Review to 7
Actions #6

Updated by Patrick Donnelly over 4 years ago

  • Status changed from 7 to Fix Under Review
Actions #7

Updated by Patrick Donnelly about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #8

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #43784: nautilus: fs: OpenFileTable object shards have too many k/v pairs added
Actions #9

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #43785: mimic: fs: OpenFileTable object shards have too many k/v pairs added
Actions #10

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions #11

Updated by Patrick Donnelly 9 months ago

  • Related to Bug #61950: mds/OpenFileTable: match MAX_ITEMS_PER_OBJ does not honor osd_deep_scrub_large_omap_object_key_threshold added
Actions

Also available in: Atom PDF