mds/OpenFileTable: match MAX_ITEMS_PER_OBJ to osd_deep_scrub_large_omap_object_key_threshold Fixes: https://tracker.ceph.com/issues/42515

Signed-off-by: Vikhyat Umrao <vikhyat@redhat.com>